2003 Sep 24 Stefan Urbanek <urbanek@host.sk>
    
    * Guard compilation with an autorelease pool
    
2003 Sep 23 Stefan Urbanek <urbanek@host.sk>

    * STBytecodeInterpreter: fixed memory leak (reported by Alexander Diemand)

2003 Aug 5 Stefan Urbanek <urbanek@host.sk>

    * STScriptObject renamed to STSmalltalkScriptObject, because of steptalk
    core change.

2003 May 17 Stefan Urbanek <urbanek@host.sk>

    * STSourceReader: treat decimal point followed by whitespace as '.' dot - 
    end of statement.

2003 May 9   Stefan Urbanek <urbanek@host.sk>

    * NSString+additions: added   

2003 May 4  Stefan Urbanek <urbanek@host.sk>

    * SmalltalkEngine: remove exception guard to allow debugging
    
2003 Apr 29 Stefan Urbanek <urbanek@host.sk>

    * STSourceReader: fixed reading of identifiers at the end of source

2003 Apr 21 Stefan Urbanek <urbanek@host.sk>

    * Version 0.7.1

2003 Apr 6 Stefan Urbanek <urbanek@host.sk>

    * STCompiler: compileString: fixed exception reporting.

2003 Apr 04  David Ayers  <d.ayers@inode.at>

    * GNUmakefile: Added flags to show all warnings except for import.
    * STBlock.m: Initialzed variables to supress compiler warnings.
    * STCompiledMethod.m: Added needed import.
    * STCompiler.m: Added missing declaration.  Wrapped declarations only
    needed for DEBUG into #ifdefs to supress compiler warnings.
    Initialzed variables to supress compiler warnings.
    * STExecutionContext.m: Unified name for private categories.

2003 Mar 25  Stefan Urbanek <urbanek@host.sk>

    * STSourceReader: added missing [super dealloc]
    * STCompiledCode: do not retain bytecode data
    * STCompiler: various memory leak fixes
    * SmalltalkEngine: guard compilation exception and release the compiler

2003 Mar 23  Stefan Urbanek <urbanek@host.sk>

    * STSourceReader: added some end of string checks

2003 Feb 3  Stefan Urbanek <urbanek@host.sk>

    * Version 0.7.0
    
2003 Feb 3  Stefan Urbanek <urbanek@host.sk>
